Fixed Style for too long ListItem titles and added ssl to .gitignore

--- a/src/components/result/ResultList.scss
+++ b/src/components/result/ResultList.scss
@@ -28,8 +28,12 @@
             }
         }
         .ListItem__Title {
+            width: calc(100% - 50px);
             .ListItem__Title--headline {
                 margin: 0;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                white-space: nowrap;
             }
             .ListItem__Title--description {
                 margin: 0;
